--- a/style.css
+++ b/style.css
@@ -166,18 +166,22 @@ body {
 
 @media (max-width: 500px) {
   .title {
-    font-size: 1.75rem;
+    font-size: 1.7rem;
     line-height: 2.35rem;
+  }
+
+  .unidade-tempo {
+    font-size: 0.8rem;
+  }
+
+  .unidade-tempo-container {
+    gap: 15px;
   }
 
   .inputs {
     grid-template-columns: 1fr;
   }
 
-  .unidade-tempo {
-    font-size: 0.8rem;
-  }
-  
   [data-unidadeDeTempo] {
     font-size: 1.8rem;
   }
@@ -198,5 +202,11 @@ body {
 
   .inputs {
     padding: 20px 20px;
+  }
+}
+
+@media (max-width: 360px) {
+  .title {
+    font-size: 1.55rem;
   }
 }
